--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,20 +1,11 @@
 <mat-toolbar class="footer">
-    <mat-toolbar-row>
-  
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            Universidad Tecnologica de Pereira
-          </div>
-          <div class="col-sm">
-            IbercTherm
-          </div>
-          <div class="col-sm">
-            Termografia Infrarroja
-          </div>
-        </div>
+  <mat-toolbar-row>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">Universidad Tecnologica de Pereira</div>
+        <div class="col-sm">IbercTherm</div>
+        <div class="col-sm">Termografia Infrarroja</div>
       </div>
-  
-    </mat-toolbar-row>
-  </mat-toolbar>
-  
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
