--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,7 +19,7 @@
               <mat-menu #autores="matMenu">
                 <button
                   mat-menu-item
-                  [routerLink]="['/autores']"
+                  [routerLink]="['/home/autores']"
                   style="background-color: #fefea2"
                 >
                   Para expositores
