--- a/src/app/website/pages/autores/autores.component.html
+++ b/src/app/website/pages/autores/autores.component.html
@@ -5,7 +5,7 @@
     </div>
     <mat-card class="autores">
       <mat-card-title>Profesionales</mat-card-title>
-      <img mat-card-image src="assets/comite.jpg" />
+      <img mat-card-image src="assets/images/comite.jpg" />
       <mat-card-content>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolorum,
@@ -30,7 +30,7 @@
 
     <mat-card class="autores">
       <mat-card-title>Estudiantes</mat-card-title>
-      <img mat-card-image src="assets/comite.jpg" />
+      <img mat-card-image src="assets/images/comite.jpg" />
       <mat-card-content>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolorum,
