--- a/src/app/website/components/layout/layout.component.html
+++ b/src/app/website/components/layout/layout.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
-
-<div class="container-layout">
+<div>
   <router-outlet></router-outlet>
 </div>
-
 <app-footer></app-footer>
