--- a/src/app/website/components/header/header.component.css
+++ b/src/app/website/components/header/header.component.css
@@ -1,59 +1,45 @@
-.header {
+.container-header {
+  width: 100%;
+  height: auto;
+  display: flex;
+
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  align-items: center;
+  /*align-content: center;*/
+
   background-image: linear-gradient(
     109.6deg,
     rgba(255, 174, 0, 1) 11.2%,
     rgba(255, 0, 0, 1) 100.2%
   );
-  height: 15%;
-  width: 100%;
 }
 
-.container {
-  height: 15%;
-  width: 100%;
-}
-
-.container img {
-  width: 58%;
-  margin-left: 20%;
-  margin-top: -9%;
-}
-
-.container button {
-  text-decoration: solid;
-  color: black;
-  font-size: 15px;
-  margin-left: 2%;
-}
-
-.contenedor img {
-  height: 200px;
-  width: 100%;
-  margin-top: -8%;
-  margin-left: -6%;
-}
-
-.container .button-session {
-  background-image: radial-gradient(
-    circle 957px at 8.7% 50.5%,
-    rgba(246, 191, 13, 1) 0%,
-    rgba(249, 47, 47, 1) 90%
+.button-session {
+  background-image: linear-gradient(
+    109.6deg,
+    rgba(255, 207, 84, 1) 11.2%,
+    rgba(255, 158, 27, 1) 91.1%
   );
+}
+
+button {
+  font-size: large;
+  font-weight: bold;
 }
 
 .banner img {
   width: 100%;
-  top: 45px;
-  text-align: center;
   border-radius: 0 0 0 20%;
 }
 
-.botones {
-  margin-left: 2%;
-}
-
-.boton {
-  position: relative;
-  margin-top: -30%;
-  margin-bottom: 25%;
+@media screen and (max-width: 720px) {
+  .container-header {
+    flex-direction: column;
+  }
+  
+  .button-session {
+    margin: 3%;
+  }
 }
