--- a/src/app/website/components/header/header.component.html
+++ b/src/app/website/components/header/header.component.html
@@ -1,85 +1,40 @@
-<mat-toolbar class="header">
-  <mat-toolbar-row>
-    <div class="container">
-      <div class="row">
-        <!--Logo-->
-        <div class="col-sm">
-          <div class="row">
-            <img routerLink="home" src="assets/resource/logo_congreso.png" />
-          </div>
-          <div class="row">
-            <a href="https://testdevdd1234.com/deploy">
-              <img
-                src="https://www.pngrepo.com/png/68072/512/github-logo-face.png"
-                style="width: 10%"
-              />
-            </a>
-          </div>
-        </div>
+<div class="container-header">
+  <img routerLink="home" src="assets/resource/logo_congreso.png" />
 
-        <!--La parte central del mat toolbar-->
-        <div class="col-sm">
-          <div class="row">
-            <div class="col-3">
-              <button mat-button routerLink="home">Inicio</button>
-            </div>
+  <div class="menu">
+    <button mat-button routerLink="home">Inicio</button>
 
-            <div class="col-3">
-              <button mat-button [matMenuTriggerFor]="autores">Autores</button>
-              <mat-menu #autores="matMenu" yPosition="below">
-                <button mat-menu-item routerLink="autores">
-                  Para expositores
-                </button>
-                <button mat-menu-item routerLink="autores">
-                  Para evaluadores
-                </button>
-                <button mat-menu-item routerLink="autores">
-                  {{ "Pagos" | uppercase }}
-                </button>
-              </mat-menu>
-            </div>
-            <div class="col-3">
-              <button mat-button [matMenuTriggerFor]="eventos">Evento</button>
-              <mat-menu #eventos="matMenu" class="desple">
-                <button mat-menu-item routerLink="evento">Cronograma</button>
-                <button mat-menu-item routerLink="evento">Expositores</button>
-                <button mat-menu-item routerLink="evento">
-                  Descubriendo la Perla
-                </button>
-              </mat-menu>
-            </div>
-            <div class="col-3">
-              <button mat-button [matMenuTriggerFor]="pagos">Comercial</button>
-              <mat-menu #pagos="matMenu">
-                <button mat-menu-item routerLink="pagos">
-                  Inscripción para empresas
-                </button>
-                <button mat-menu-item routerLink="pagos">Salon virtual</button>
-              </mat-menu>
-            </div>
-          </div>
-        </div>
+    <button mat-button [matMenuTriggerFor]="autores">Autores</button>
+    <mat-menu #autores="matMenu">
+      <button mat-menu-item routerLink="autores">Para expositores</button>
+      <button mat-menu-item routerLink="autores">Para evaluadores</button>
+      <button mat-menu-item routerLink="autores">
+        {{ "Pagos" | uppercase }}
+      </button>
+    </mat-menu>
 
-        <!--Los botones del Mat-toolbar-->
-        <div class="col-sm">
-          <div class="botones">
-            <div class="row">
-              <div class="col-6" style="text-align: right">
-                <button
-                  class="button-session"
-                  mat-raised-button
-                  routerLink="ingreso"
-                >
-                  Inicio de sesión
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </mat-toolbar-row>
-</mat-toolbar>
+    <button mat-button [matMenuTriggerFor]="eventos">Evento</button>
+    <mat-menu #eventos="matMenu">
+      <button mat-menu-item routerLink="evento">Cronograma</button>
+      <button mat-menu-item routerLink="evento">Expositores</button>
+      <button mat-menu-item routerLink="evento">Descubriendo la Perla</button>
+    </mat-menu>
+
+    <button mat-button [matMenuTriggerFor]="pagos">Comercial</button>
+    <mat-menu #pagos="matMenu">
+      <button mat-menu-item routerLink="pagos">
+        Inscripción para empresas
+      </button>
+      <button mat-menu-item routerLink="pagos">Salon virtual</button>
+    </mat-menu>
+  </div>
+
+  <!--Los botones del Mat-toolbar-->
+
+  <button class="button-session" mat-raised-button routerLink="ingreso">
+    Inicio de sesión
+  </button>
+</div>
 
 <div class="banner">
   <img src="assets/resource/banner.jpg" />
