--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,10 @@
-html,
-body {
+html, body {
   height: 100%;
 }
 
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
