--- a/src/app/website/components/footer/footer.component.css
+++ b/src/app/website/components/footer/footer.component.css
@@ -1,4 +1,6 @@
 .container-footer {
+  width: 100%;
+  
   color: white;
   background-image: linear-gradient( 109.6deg, rgba(11,132,145,1)  11.2%, rgba(0,0,0,1) 91.1% );  
   
