--- a/src/app/website/components/header/header.component.html
+++ b/src/app/website/components/header/header.component.html
@@ -4,7 +4,7 @@
   <div class="menu">
     <button mat-button routerLink="home">Inicio</button>
 
-    <button mat-button [matMenuTriggerFor]="autores">Autores</button>
+    <button mat-button [matMenuTriggerFor]="autores">Autores &#9660;</button>
     <mat-menu #autores="matMenu">
       <button mat-menu-item routerLink="autores">Para expositores</button>
       <button mat-menu-item routerLink="autores">Para evaluadores</button>
@@ -13,14 +13,14 @@
       </button>
     </mat-menu>
 
-    <button mat-button [matMenuTriggerFor]="eventos">Evento</button>
+    <button mat-button [matMenuTriggerFor]="eventos">Evento &#9660;</button>
     <mat-menu #eventos="matMenu">
       <button mat-menu-item routerLink="evento">Cronograma</button>
       <button mat-menu-item routerLink="evento">Expositores</button>
       <button mat-menu-item routerLink="evento">Descubriendo la Perla</button>
     </mat-menu>
 
-    <button mat-button [matMenuTriggerFor]="pagos">Comercial</button>
+    <button mat-button [matMenuTriggerFor]="pagos">Comercial &#9660;</button>
     <mat-menu #pagos="matMenu">
       <button mat-menu-item routerLink="pagos">
         Inscripción para empresas
@@ -32,7 +32,7 @@
   <!--Los botones del Mat-toolbar-->
 
   <button class="button-session" mat-raised-button routerLink="ingreso">
-    Inicio de sesión
+    Inicio de sesión 🔐
   </button>
 </div>
 
