--- a/src/app/website/pages/home/home.component.css
+++ b/src/app/website/pages/home/home.component.css
@@ -15,16 +15,33 @@
 
 .container p {
   font-size: 18px;
-  margin: 5%;
-  line-height: normal;
+  margin: 2%;
+  line-height: 150%;
   padding: auto;
   text-align: justify;
 }
 
 .container-logos {
-  text-align: center;
-  align-items: baseline;
-  justify-content: baseline;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  justify-content: space-around;
+  /*align-content: space-between;*/
+  align-items: center;
+}
+
+.container-logos a {
+  width: 15%;
+  height: 15%;
+
+  max-width: 25%;
+  min-width: 200px;
+}
+
+.container-logos a .logo {
+  width: 100%;
+  height: 100%;
 }
 
 .container-comite h1 {
@@ -36,7 +53,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-content: center;
 }
 
@@ -84,11 +101,6 @@
   margin: auto;
   min-height: 100%;
   min-width: 100%;
-}
-
-.logo {
-  width: 55%;
-  height: 80%;
 }
 
 /*Contenedor de Tematicas*/
