--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
