mensaje en home

--- a/src/app/website/pages/home/home.component.html
+++ b/src/app/website/pages/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <!--Contenedor del evento-->
     <h1>Evento</h1>
+    <h1>cambioooo</h1>
+    <h1>Entra pushhhhh</h1>
     <p>
       Desde nuestros grupos de investigación GIMM (Grupo de investigación en
       propiedades magnéticas y magneto) y GEF (Grupo de Electrofisiología)
